large/kubernetes-master/staging/src/k8s.io/api/testdata/v1.33.0/networking.k8s.io.v1beta1.Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    annotationsKey: annotationsValue
  creationTimestamp: "2008-01-01T01:01:01Z"
  deletionGracePeriodSeconds: 10
  deletionTimestamp: "2009-01-01T01:01:01Z"
  finalizers:
  - finalizersValue
  generateName: generateNameValue
  generation: 7
  labels:
    labelsKey: labelsValue
  managedFields:
  - apiVersion: apiVersionValue
    fieldsType: fieldsTypeValue
    fieldsV1: {}
    manager: managerValue
    operation: operationValue
    subresource: subresourceValue
    time: "2004-01-01T01:01:01Z"
  name: nameValue
  namespace: namespaceValue
  ownerReferences:
  - apiVersion: apiVersionValue
    blockOwnerDeletion: true
    controller: true
    kind: kindValue
    name: nameValue
    uid: uidValue
  resourceVersion: resourceVersionValue
  selfLink: selfLinkValue
  uid: uidValue
spec:
  backend:
    resource:
      apiGroup: apiGroupValue
      kind: kindValue
      name: nameValue
    serviceName: serviceNameValue
    servicePort: servicePortValue
  ingressClassName: ingressClassNameValue
  rules:
  - host: hostValue
    http:
      paths:
      - backend:
          resource:
            apiGroup: apiGroupValue
            kind: kindValue
            name: nameValue
          serviceName: serviceNameValue
          servicePort: servicePortValue
        path: pathValue
        pathType: pathTypeValue
  tls:
  - hosts:
    - hostsValue
    secretName: secretNameValue
status:
  loadBalancer:
    ingress:
    - hostname: hostnameValue
      ip: ipValue
      ports:
      - error: errorValue
        port: 1
        protocol: protocolValue
# ID-1768294471-3852589d
